# froglet

./: .dockerignore  .gitignore  .gitleaks.toml  .mcp.json  ADAPTERS.md  AGENTS.md  ARCHITECTURE.md  BOT_RUNTIME_ALPHA.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  IMPLEMENTATION_CHECKLIST.md  NOSTR.md  OPERATOR.md  README.md  RUNTIME.md  SECURITY.md  SPEC.md  STORAGE_PROFILE.md  TODO.md  compose.ci.yaml  compose.discovery.yaml  compose.full-runtime.yaml  compose.provider.yaml  compose.runtime.yaml  compose.yaml  froglet_client.py  froglet_nostr_adapter.py  improvements.md  security_best_practices_report.md  test_client_sdk.py  test_conformance_vectors.py  test_ecash.py  test_examples.py  test_hardening.py  test_jobs.py  test_lnd_regtest.py  (+12 more)
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  docs-site.yml  release.yml
.kiro/hooks/: auto-update-docs.kiro.hook  code-quality-review.kiro.hook
.kiro/specs/docs-site-refinement/: .config.kiro  design.md  requirements.md  tasks.md
.kiro/specs/gcp-harness-issue-triage/: .config.kiro  bugfix.md  design.md  tasks.md
.kiro/specs/production-contract-hardening/: .config.kiro  design.md  requirements.md  tasks.md
conformance/: README.md  kernel_v1.json
docs/: ADAPTERS.md  API_ERRORS.md  ARBITER.md  ARCHITECTURE.md  BOT_RUNTIME_ALPHA.md  CONFIDENTIAL.md  CONFIGURATION.md  DISTRIBUTION_MATRIX.md  DOCKER.md  GCP_SINGLE_VM.md  HOSTED_TRIAL.md  IDENTITY_ATTESTATION.md  IMPLEMENTATION_CHECKLIST.md  KERNEL.md  LAUNCH_COPY.md  LAUNCH_POST.md  MARKETPLACE.md  MARKETPLACE_SPLIT.md  MONITORING.md  MOUNTS.md  NAME_COHERENCE.md  NEMOCLAW.md  NOSTR.md  OPENCLAW.md  OPERATOR.md  OPERATOR_DEPLOY.md  PAYMENT_MATRIX.md  PLAYGROUND_PLAN.md  README.md  RELEASE.md  RELEASE_PLAN.md  REMOTE_AGENT_LAYER.md  ROLE_TOOL_ARCHITECTURE.md  ROTATION.md  RUNTIME.md  SECURITY_PASS.md  SERVICE_BINDING.md  STORAGE_PROFILE.md  SUBDOMAIN_PLAN.md  openapi.yaml
docs-site/: .gitignore  README.md  astro.config.mjs  package-lock.json  package.json  wrangler.jsonc
docs-site/public/: CNAME
docs-site/scripts/: generate-og.mjs
docs-site/src/: worker.ts
docs-site/src/components/: ChainCanvasInit.astro  DealFlowSequenceInit.astro  IdentityDiagramInit.astro  ProfitChartInit.astro  SettlementCalcInit.astro  SettlementVizInit.astro  SiteFooter.astro  SiteHeader.astro  StarlightFooter.astro  StarlightHeader.astro  StarlightSidebar.astro  ThemeProvider.astro  ThemeToggle.astro  TrustThresholdInit.astro
docs-site/src/data/: live-snapshot.ts  nav-links.ts
docs-site/src/pages/: 404.astro  demo.astro  index.astro  managed.astro  marketplace.astro  open-source.astro  status.astro
docs-site/src/scripts/: chain-canvas.ts  clipboard.ts  deal-flow-sequence.ts  identity-diagram.ts  marketplace-live.ts  (+6 more)
examples/: README.md  codex-mcp-config.toml  confidential_policy.example.toml  cursor-mcp-config.json  docker-mcp-config.json  runtime_curated_discovery.py  runtime_mock_lightning_buy_accept.py  runtime_search_and_buy.py  runtime_search_and_inspect.py
froglet-marketplace/: ARCHITECTURE.md  Cargo.toml  docker-compose.yml
froglet-marketplace/migrations/: 001_init.sql  002_stakes.sql
froglet-marketplace/src/: config.rs  db.rs  lib.rs  verify.rs
froglet-marketplace/src/handlers/: mod.rs  provider.rs  receipts.rs  register.rs  search.rs  stake.rs  topup.rs
froglet-marketplace/src/indexer/: mod.rs  projector.rs
froglet-protocol/: Cargo.toml
froglet-protocol/src/: canonical_json.rs  crypto.rs  lib.rs
froglet-protocol/src/protocol/: identity_attestation.rs  kernel.rs  mod.rs
higher_layers/: CHECKLIST.md  DECISIONS.md  EXECUTION_PLAN.md  MARKETPLACE.md  OWNERSHIP.md  README.md  REPO_STRATEGY.md
ops/lightsail/: froglet-node.template.json  placeholder-nginx.json
private/: README.md
proptest-regressions/: operator.txt
python/: README.md  __init__.py  froglet_client.py  froglet_nostr_adapter.py  requirements.txt
python/tests/: __init__.py  test_acceptance.py  test_bench_api.py  test_blackbox.py  test_client_sdk.py  test_conformance_vectors.py  test_discovery.py  test_examples.py  test_fuzz_api.py  test_hardening.py  test_install_script.py  test_jobs.py  test_lnd_regtest.py  test_nostr_adapter.py  test_payments.py  test_pentest.py  test_privacy.py  test_protocol.py  test_runtime.py  test_sandbox.py  test_setup_scripts.py  test_soak.py  test_spike.py  test_support.py
scripts/: ci_linux.sh  cloudflare_dns.sh  deploy_aws.sh  deploy_gcp_single_vm.sh  docker-entrypoint.sh  gcp_harness.sh  gcp_instance.sh  gitleaks_gate.sh  hosted_smoke.sh  install.sh  package_release_assets.sh  release_gate.sh  setup-agent.sh  setup-payment.sh  smoke_install_from_assets.sh  strict_checks.sh  test_suite.sh  verify_release_assets.sh
src/: api.rs  confidential.rs  config.rs  crypto.rs  db.rs  deals.rs  discovery.rs  discovery_client.rs  discovery_server.rs  ecash.rs  execution.rs  identity.rs  jobs.rs  lib.rs  lnd.rs  main.rs  marketplace.rs  marketplace_client.rs  marketplace_server.rs  nostr.rs  operator.rs  payments.rs  pricing.rs  protocol.rs  provider_catalog.rs  provider_projects.rs  provider_resolution.rs  python_sandbox.rs  requester_deals.rs  runtime_auth.rs  sandbox.rs  server.rs  session_pool.rs  settlement.rs  state.rs  tls.rs  tor.rs  wasm.rs  wasm_db.rs  wasm_host.rs  (+1 more)
src/api/: http_catalog.rs  http_confidential.rs  http_deals.rs  http_discovery.rs  http_events.rs  http_execution.rs  http_settlement.rs  mod.rs  sessions.rs  test_support.rs  types.rs
src/builtins/: demo_add.rs  demo_echo.rs  mod.rs
src/protocol/: kernel.rs  mod.rs  publication.rs  workload.rs
src/settlement/: lightning.rs  mod.rs  none.rs  stripe.rs  x402.rs
tests/: README.md  builtin_service_dispatch.rs  generate_free_service_vectors.rs  kernel_conformance_vectors.rs  lnd_rest_settlement.rs  payments_and_discovery.rs  payments_and_marketplace.rs  production_contract_properties.rs  runtime_routes.rs
tests/chaos/: chaos_runner.sh
tests/e2e/: agentic_exploratory.mjs
(+117 files in other folders)
