[package]
name = "froglet"
version = "0.1.0"
edition = "2024"

[dependencies]
# Async Runtime & Web Framework
tokio = { version = "1.37", features = ["full"] }
axum = { version = "0.7", features = ["macros", "tokio"] }
tower-http = { version = "0.5", features = ["trace", "cors", "set-header"] }
tower = { version = "0.4", features = ["util", "limit", "timeout"] }
hyper = { version = "1.0", features = ["full"] }
hyper-util = { version = "0.1", features = ["tokio"] }
futures = "0.3"
reqwest = { version = "0.13.2", default-features = false, features = ["json", "rustls"] }
rustls = { version = "0.23", default-features = false, features = ["ring", "std"] }

# Serialization & Deserialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_json_canonicalizer = "0.3.2"

# External Tor sidecar integration

# Cryptography
k256 = { version = "0.13", features = ["schnorr"] }
rand = "0.8"
hex = "0.4"
sha2 = "0.10"
base64 = "0.22"
lightning-invoice = { version = "0.34", features = ["std"] }

# Security Sandbox (WASM)
wasmtime = "41.0.4"

# Database
rusqlite = { version = "0.38", features = ["bundled"] }

# Logging and errors
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "2.0"

# Utilities
once_cell = "1"
subtle = "2"
toml = "0.9"

[dev-dependencies]
bitcoin = "0.32.8"
wat = "1"
