[workspace]
members = [".", "froglet-protocol"]
resolver = "2"

[package]
name = "froglet"
version = "0.1.0"
edition = "2024"
autobins = false
authors = ["Armanas Povilionis-Muradian"]
homepage = "https://armanas.dev"
repository = "https://github.com/armanas/froglet"

[[bin]]
name = "froglet-node"
path = "src/bin/froglet-node.rs"


[dependencies]
froglet-protocol = { path = "froglet-protocol" }

# Async Runtime & Web Framework
tokio = { version = "1.37", features = ["full"] }
axum = { version = "0.7", features = ["macros", "tokio"] }
tower-http = { version = "0.5", features = ["trace", "cors", "set-header"] }
tower = { version = "0.4", features = ["util", "limit", "timeout"] }
hyper = { version = "1.0", features = ["full"] }
hyper-util = { version = "0.1", features = ["tokio"] }
futures = "0.3"
reqwest = { version = "0.13.2", default-features = false, features = ["json", "rustls", "socks"] }
rustls = { version = "0.23", default-features = false, features = ["ring", "std"] }

# Serialization & Deserialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_json_canonicalizer = "0.3.2"

# External Tor sidecar integration

# Cryptography
k256 = { version = "0.13", features = ["schnorr", "ecdh"] }
rand = "0.8"
hex = "0.4"
sha2 = "0.10"
base64 = "0.22"
lightning-invoice = { version = "0.34", features = ["std"] }
aes-gcm-siv = "0.11"

# Security Sandbox (WASM)
wasmtime = "42.0.2"

# Database
rusqlite = { version = "0.38", features = ["bundled"] }

# Logging and errors
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "2.0"

# Utilities
once_cell = "1"
subtle = "2"
zeroize = "1"
toml = "0.9"
oci-registry-client = "0.2.3"
urlencoding = "2.1"
wat = "1"

# Security Sandbox (Python) — Linux-only.
# landlock restricts filesystem access; seccompiler installs BPF syscall filters.
# On non-Linux hosts the src/python_sandbox.rs module gates Python execution
# behind FROGLET_ALLOW_UNSANDBOXED_PYTHON=1 and skips the sandbox entirely.
[target.'cfg(target_os = "linux")'.dependencies]
landlock = "0.4"
seccompiler = "0.5"
libc = "0.2"

[dev-dependencies]
bitcoin = "0.32.8"
proptest = "1"
rcgen = "0.13"
tempfile = "3"
tokio-rustls = "0.26"
