[package]
name = "froglet-protocol"
version = "0.1.0-alpha.1"
edition = "2024"
authors = ["Armanas Povilionis-Muradian"]
homepage = "https://armanas.dev"
repository = "https://github.com/armanas/froglet"
description = "Froglet economic protocol: signed artifacts, canonical serialization, and cryptographic verification"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_json_canonicalizer = "0.3.2"
k256 = { version = "0.13", features = ["schnorr"] }
rand = "0.8"
hex = "0.4"
sha2 = "0.10"
hmac = "0.12"
